# agentic-engineering

./: .env.example  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.agents/: AGENTS.md  README.md  WORKFLOW.md  config.json  cursor-install.ps1  cursor-install.sh
.agents/rules/: commit.md  get-docs.md  python-testing.md  python.md
.agents/skills/ci-debug/: SKILL.md
.agents/skills/document/: SKILL.md
.agents/skills/execution/plan/code-review/: SKILL.md
.agents/skills/implement-tdd/: SKILL.md
.agents/skills/specification/plan-exec/: SKILL.md
.agents/skills/specification/spec-milestone/: SKILL.md
.agents/skills/specification/spec-project/: SKILL.md
.agents/skills/specification/spec-task/: SKILL.md
.agents/skills/specification/spec-tasks/: SKILL.md
.agents/skills/specification/spec-validations/: SKILL.md
.cursor/rules/: get-docs.mdc  python-testing.mdc  python.mdc
docs/: cursor 2.5.md  gateflow-architecture.md  gateflow-work-breakdown.md
docs/knowledge-base/: cursor-cli.md
my-project/.cursor/rules/: gateflow-poc-rule-python-testing.mdc  gateflow-poc-rule-python.mdc  gateflow-poc-step-execute.mdc  gateflow-poc-step-finalize.mdc  gateflow-poc-step-plan.mdc  gateflow-poc-step-review.mdc  gateflow-poc-step-verify.mdc  gateflow-rule-python-testing.mdc  gateflow-rule-python.mdc  gateflow-step-document.mdc  gateflow-step-execute.mdc  gateflow-step-finalize.mdc  gateflow-step-plan.mdc  gateflow-step-review.mdc  gateflow-step-verify.mdc
tests/gateflow/unit/: test_main.py
(+3 files in other folders)
